# sch

./: app.py  netlify.toml  pyproject.toml  requirements.txt  uesr1.html
netlify/functions/: app.py
static/css/: style.css
static/js/: main.js
templates/: schedule.html  schedule_content.html
